# daisy-esp32-guitar-pedal

./: .gitignore  README.md  bash.sh  revisions.md
code/: .script.sh  Cargo.toml  Embed.toml  build.rs  defmt.x  esp32s3_linker.ld  memory.x
code/.cargo/: config.toml
code/rtt_log/: code_STM32H743VI_1779576905002_channel0.txt  code_STM32H743VI_1779577155652_channel0.txt  code_STM32H743VI_1779578024946_channel0.txt  code_STM32H743VI_1779670269503_channel0.txt  code_STM32H743VI_1779758564106_channel0.txt  code_STM32H743VI_1779759153010_channel0.txt  code_STM32H743VI_1779759338174_channel0.txt  code_STM32H743VI_1779759454431_channel0.txt  code_STM32H743VI_1779759498655_channel0.txt  code_STM32H743VI_1779759521884_channel0.txt  code_STM32H743VI_1779762350739_channel0.txt  code_STM32H743VI_1780017277512_channel0.txt  code_STM32H743VI_1780101766850_channel0.txt  code_STM32H743VI_1782159628658_channel0.txt  code_STM32H743VI_1782159740714_channel0.txt  code_STM32H743VI_1782159779842_channel0.txt  code_STM32H743VI_1782160017299_channel0.txt  code_STM32H743VI_1782160054713_channel0.txt  code_STM32H743VI_1782160087654_channel0.txt  code_STM32H743VI_1782160901502_channel0.txt  code_STM32H743VI_1782160923423_channel0.txt  code_STM32H743VI_1782427621920_channel0.txt  code_STM32H743VI_1782433840765_channel0.txt  code_STM32H743VI_1782434631501_channel0.txt  code_STM32H743VI_1782434710395_channel0.txt  code_STM32H743VI_1782436140723_channel0.txt  code_STM32H743VI_1783779670566_channel0.txt
code/src/: adc.rs  delays.rs  lib.rs  main.rs  uart.rs
code/src/audio_driver/: driver.rs
code/src/audio_processing/: dsp.rs  mod.rs
code/src/audio_processing/audio_modules/: freeverb.rs  gain.rs  gain_float.rs  gain_int.rs  invert.rs  looper.rs  mod.rs
code/src/audio_processing/audio_modules/freeverb/src/clib/src/: lib.rs
code/src/audio_processing/audio_modules/freeverb/src/freeverb_module/src/: lib.rs
code/src/audio_processing/freeverb/src/freeverb/src/: freeverb.rs
code/src/config/: settings.rs
code/src/driver/: I2C.rs  I2S.rs
code/src/examples/: sin.rs
code/src/modules/: FFT.rs  bit_crush.rs  clipping.rs  delay.rs  fuzz.rs  gain.rs  hard_clipping.rs  looper.rs  mod.rs  process.rs  sin.rs
code/src/modules/debug/: vol.rs
daisy-code/: Cargo.toml  Embed.toml
daisy-code/.cargo/: config.toml
daisy-code/rtt_log/: code_STM32H743VI_1783779586095_channel0.txt
daisy-code/src/: main.rs  uart.rs
daisy-code/src/modules/: FFT.rs  bit_crush.rs  clipping.rs  delay.rs  fuzz.rs  gain.rs  looper.rs  process.rs  sin.rs  stereo.rs
daisy-code/src/modules/debug/: mod.rs
esp32-code/: Cargo.toml
esp32-code/src/: index.html
full-pcb/: Input.kicad_sch  L.net  Output.kicad_sch  Output.net  fp-info-cache  full_pcb.csv  full_pcb.kicad_pcb  full_pcb.kicad_prl  full_pcb.kicad_pro  full_pcb.kicad_sch  full_pcb.net  full_pcb_sym.wbk  power.kicad_sch
mini-pcb/: #auto_saved_files#  Input.kicad_sch  Input.kicad_sch-bak  Output.kicad_sch  mini_pcb.csv  mini_pcb.kicad_pcb  mini_pcb.kicad_prl  mini_pcb.kicad_pro  mini_pcb.kicad_sch  mini_pcb.kicad_sch-bak  mini_pcb.net  power.kicad_sch  ~mini_pcb.kicad_sch.lck
pcb/: #auto_saved_files#  esp32-fx.kicad_pcb  esp32-fx.kicad_prl  esp32-fx.kicad_pro  esp32-fx.kicad_sch  esp32-fx.net  esp32-fx_v2.kicad_pcb  esp32-fx_v2.kicad_prl  esp32-fx_v2.kicad_pro  esp32-fx_v2.kicad_sch  esp32-fx_v2.net  fp-info-cache  ~esp32-fx.kicad_pcb.lck
pcb_v2/: esp32-fx_v2.kicad_pcb  esp32-fx_v2.kicad_pro  esp32-fx_v2.kicad_sch  esp32-fx_v2.net
src/: main.rs
sym/: sym.kicad_prl  sym.kicad_pro  sym.kicad_sch
testy/: Cargo.toml
(+11 files in other folders)
