[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
crc8-rs = "1.1.1"
daisy = { version = "0.11.0", features = ["seed_1_2"] } 
defmt = "1.0.1"
defmt-rtt = "1.1.0"
heapless = "0.9.2"
panic-probe = "1.0.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[target.thumbv7-none-eabihf]
rustflags = ["-C", "link-arg=-Tlinker.ld"]

[profile.dev]
panic = "abort"


