[package]
name = "code" 
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
crc8-rs = "1.1.1"
daisy = { version = "0.11.0", features = ["seed_1_2"] }
defmt-rtt = "1.1.0"
fugit = "0.3.9"
heapless = "0.9.2"
libm = "0.2.15"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rtic = { version = "2.2.0", features = ["thumbv7-backend"], default-features = false }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }


[profile.release]
lto = false
codegen-units = 1
panic = "abort"
debug = 2

[profile.dev]
debug = 2

[dependencies.defmt]
version = "=1.0.1"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true


