[package]
name = "code" 
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
#crc8-rs = "1.1.1"
daisy = { git = "https://github.com/TMANTsmith/daisy", features = ["seed_1_2"] }
defmt-rtt = "1.1.0"
embedded-alloc = "0.7.0"
libm = "0.2.16"
microfft = "0.6.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rtic = { version = "2.2.0", features = ["thumbv7-backend"], default-features = false }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }


[profile.release]
lto = false
codegen-units = 1
panic = "abort"
debug = 2

[profile.dev]
debug = 2

[dependencies.defmt]
version = "=1.0.1"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true


